styles.css
body {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    height: 100vh;
    margin: 0;
    padding: 0;
    background-color: #f4f4f4;
    font-family: Arial, sans-serif;
}

h1 {
    margin-top: 10px;
    margin-bottom: 10px;
}

.searchContainer {
    display: flex;
    justify-content: center;
    width: 100%;
}

#searchBar {
    width: 30%;
    padding: 10px;
    margin-right: 10px;
    border-radius: 5px;
    border: 1px solid #ccc;
}

#clearButton {
    padding: 10px;
    border: none;
    background-color: #007BFF;
    color: white;
    border-radius: 5px;
    cursor: pointer;
}

#buttonContainer {
    width: 70%;
    height: 30px;
    /* modify this according to your need */
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin-bottom: 20px;
}

#buttonContainer button {
    background-color: #ddd;
    border: none;
    padding: 10px;
    margin: 5px;
    border-radius: 15px;
    cursor: pointer;
}

.mapContainer {
    position: relative;
    width: 70%;
    height: 75%;
    display: flex;
    justify-content: center;
    align-items: center;
}

#map {
    width: 100%;
    height: 100%;
}

#respawnHours {
    position: absolute;
    top: 0;
    right: 0;
    background-color: white;
    padding: 10px;
    border-radius: 5px;
    display: none;

}

#respawnHoursText {
    display: inline-block
}

img {
    position: fixed;
    right: 20px;
    bottom: 20px;
    width: 40px;
    /* adjust size as needed */
}

